noinst_LIBRARIES = libfpac.a
libfpac_a_SOURCES = libwp.c libcfg.c libmd.c md5.c md5.h procutils.c ax25compat.h fpac.h global.h wp.h

AM_CPPFLAGS = -DAX25_SYSCONFDIR=\""$(sysconfdir)/ax25/"\" \
              -DAX25_LOCALSTATEDIR=\""$(localstatedir)/ax25/"\"

AX25_SYSCONFDIR=@sysconfdir@/ax25/
AX25_LOCALSTATEDIR=@localstatedir@/ax25/

