man_MANS = \
	aprslist.1 \
	aprslist.conf.5 \
	ax25parms.1 \
	calibrate.1 \
	calld.1 \
	flexd.1 \
	flexd.conf.5 \
	flexd.routes.5 \
	fpac.conf.5 \
	fpac.dnic.5 \
	fpac.hello.5 \
	fpac.info.5 \
	fpac.nodes.5 \
	fpac.routes.5 \
	fpac.sh.1 \
	fpaccfg.1 \
	fpacnode.1 \
	fpacroute.1 \
	fpacshell.1 \
	fpacstat.1 \
	fpacwdog.1 \
	fpacwpd.1 \
	fpad.1 \
	mailbbs.1 \
	monitor.1 \
	remote.1 \
	versions.1 \
	wpcmp.1 \
	wpconvert.1 \
	wpedit.1 \
	wpmaint.1 \
	wpserv.1 \
	wpstress.1 \
	yapp.1

EXTRA_DIST = $(man_MANS)

