docdir = @sysconfdir@/ax25/fpac/help
doc_DATA = Alias.hlp \
	APplications.hlp \
	CALLbook.hlp \
	Connect.hlp \
	HOst.hlp \
	IPRoutes.hlp \
	Mheard.hlp \
	Ports.hlp \
	STats.hlp \
	TAlk.hlp \
	Users.hlp \
	BBs.hlp \
	CLuster.hlp \
	Destinations.hlp \
	Help.hlp \
	Info.hlp \
	NEtrom.hlp \
	Nodes.hlp \
	Quit.hlp \
	SYSop.hlp \
	TRace.hlp \
	Wp.hlp \
	Bye.hlp \
	CONVers.hlp \
	Finger.hlp \
	IPLinks.hlp \
	Links.hlp \
	PIng.hlp \
	Routes.hlp \
	Status.hlp \
	Telnet.hlp \
	VERsions.hlp

EXTRA_DIST = $(doc_DATA)

