docdir = $(datadir)/doc/@PACKAGE@/html
doc_DATA = 	FPAC-HOWTO.html \
		FPAC-HOWTO-1.html \
		FPAC-HOWTO-2.html \
		FPAC-HOWTO-3.html \
		FPAC-HOWTO-4.html \
		FPAC-HOWTO-5.html \
		FPAC-HOWTO-6.html \
		FPAC-LINUX-FLASH-MINI-HOWTO-FR104.html \
		FPAC-LINUX-FLASH-MINI-HOWTO104.html \
		FPAC-MINI-HOWTO-175.html \
		FPAC-MINI-HOWTO-FR-175.html \
		next.gif \
		prev.gif \
		toc.gif

EXTRA_DIST = $(doc_DATA)

